--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
     "displayName": "ZLanguage Syntax Highlighting",
     "description": "Syntax highlighting for the Z programming language",
     "version": "0.0.1",
+    "publisher": "N8",
     "engines": {
         "vscode": "^1.36.0"
     },
     "categories": [
         "Programming Languages"
     ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/zlanguage/zlanguage-syntax-highlighting"
+    },
     "contributes": {
         "languages": [{
             "id": "zlanguage",
